--- a/move-to-cdn/css/embl-petrol-colours.css
+++ b/move-to-cdn/css/embl-petrol-colours.css
@@ -1,20 +1,11 @@
 /*
-
 	Colour palette: EMBL Petrol
 	Details: Accented Analogic from ColourSchemeDesigner
 	         http://colorschemedesigner.com/#3i61TnBpxw0w0
-
 */
-
 
 /* Color
 ===================================================*/
-
-div#topbar { 
-	background-color: #207a7a;
-	border-bottom: 1px solid #222;
-}
-
 a,a:link {
   color: #0f2559;
 }
@@ -25,89 +16,31 @@ a:active {
   color: #0e6a0e;
 }
 
-
-h1, h2, h3, h4, h5, h6 {
-    color: #222222;
-}
-
 h1 { color: #f7f7f7; }
-
-h2 {
-    color: #207a7a;
-}
-
-h3 {
-    color: #996a44;
-}
-
-th {
-	background-color: #70BDBD; /* #2ba32b; */
-	background-color: rgba(112, 189, 189, 0.5);
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#70BDBD', EndColorStr='#70BDBD'); 
-	filter: progid:DXImageTransform.Microsoft.transparency(50); 
-}
+h2 { color: #207a7a; }
+h3 { color: #444444; }
 
 a.special { background-color: #7cd17c; }
 
 form input.submit {		
-	border-color: #295c5c;	/* P2 */
-	
+	border-color: #295c5c;	/* P2 */	
 	background-color: #207a7a;	/* colour P1 */
-	background-image: -moz-linear-gradient(top, #54bdbd, #207a7a); 
-	background-image: -webkit-gradient(linear,left top,left bottom,color-stop(0, #54bdbd),color-stop(1, #207a7a)); 
-	background-image: -webkit-linear-gradient(#54bdbd, #207a7a); 
-	background-image: linear-gradient(top, #54bdbd, #207a7a);
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#54bdbd', EndColorStr='#207a7a'); 
-	
 	color: #f8f8f8;
-	text-shadow: #145251 0 1px 1px;
 }	
 
 form input.submit:hover,
 form input.submit:focus,
 form input.submit:active { background: #207a7a; }
-
-/* div.box { border: 10px solid #7cd17c; } */	/* [FR - 28/01/2013: this appears to be more hindrance than help! */
-
 div#local-masthead { background-color: #70BDBD; }
 
-
-/* For use on the EBI homepage... */
-div#local-masthead.gradient {
-	background-color: #70bdbd;
-	background-image: -moz-linear-gradient(top, #70bdbd, #9adede); 
-	background-image: -webkit-gradient(linear,left top,left bottom,color-stop(0, #70bdbd),color-stop(1, #9adede)); 
-	background-image: -webkit-linear-gradient(#70bdbd, #9adede); 
-	background-image: linear-gradient(top, #70bdbd, #9adede);
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#70bdbd', EndColorStr='#9adede'); 
-	
-}
-
-
-
-/* Colour the faux-underline for local menu items */
-div#local-masthead ul li a:hover,
-div#local-masthead ul li a:focus,
-div#local-masthead ul li a:active {
-	border-bottom: 3px solid #207A7A;
-}
-
-
-
 /* testing masthead combos */
-/* div#local { background-color: #70bdbd; } */
-
 div#mastheads div#local h1 { color: #222; }
-
 
 /* Trying out some things for the expand/collapse global masthead */
 body.expander div#global { border-bottom: 1px solid #111; }
-
 body.expander div#local { border-top: 1px solid #70D3D3; }
 
-
 /* Palette color codes */
-
 .primary-1 { background-color: #207A7A }
 .primary-2 { background-color: #295C5C }
 .primary-3 { background-color: #0A4F4F }
@@ -133,4 +66,3 @@ body.expander div#local { border-top: 1px solid #70D3D3; }
 .complement-5 { background-color: #E5B288 }
 
 /* end */
-
